<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5sdp"
    android:padding="@dimen/_10sdp"
    app:cardBackgroundColor="@color/black"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardElevation="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp">

        <EditText
            android:id="@+id/mLabelET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/ic_label_bg"
            android:fontFamily="@font/gotham"
            android:paddingStart="@dimen/_30sdp"
            android:paddingTop="@dimen/_15sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/mLabelET"
            android:layout_marginStart="@dimen/_20sdp"
            android:background="@color/bg_grey"
            android:fontFamily="@font/gotham"
            android:paddingHorizontal="@dimen/_3sdp"
            android:paddingVertical="@dimen/_2sdp"
            android:text="@string/label"
            android:textColor="@color/theme_color" />

        <TextView
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mLabelET"
            android:layout_alignParentRight="true"
            android:layout_marginVertical="@dimen/_10sdp"
            android:fontFamily="@font/gotham"
            android:paddingHorizontal="@dimen/_30sdp"
            android:paddingVertical="@dimen/_2sdp"
            android:text="@string/ok"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mLabelET"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_toLeftOf="@id/ok"
            android:fontFamily="@font/gotham"
            android:paddingHorizontal="@dimen/_3sdp"
            android:paddingVertical="@dimen/_2sdp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>
