<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="12dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="12dp"
    android:layout_marginBottom="8dp"
    app:cardBackgroundColor="@color/bg_grey"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardElevation="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_10sdp">

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_down_arrow" />

        <RelativeLayout
            android:id="@+id/titleRL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/alarm_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="9:00"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_30sdp" />

            <TextView
                android:id="@+id/alarm_tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/alarm_tv"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_toEndOf="@id/alarm_tv"
                android:fontFamily="@font/lato"
                android:text="am"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/mainLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleRL"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/alarm_days"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginVertical="@dimen/_10sdp"
                android:layout_weight="0.5"
                android:fontFamily="@font/lato"
                android:lineSpacingExtra="@dimen/_5sdp"
                android:text="sun,sat"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/alarm_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_marginVertical="@dimen/_10sdp"
                android:layout_weight="1.5"
                android:checked="true"
                android:thumb="@drawable/switch_ios_selector"
                app:track="@drawable/switch_ios_track" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/hiddenRL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mainLL"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/days"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="7">

                <clock.alarm.stopwatch.views.DaySwitch
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:layout_marginHorizontal="@dimen/_3sdp"
                    android:layout_weight="1"
                    android:tag="Sun" />

                <clock.alarm.stopwatch.views.DaySwitch
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:layout_marginHorizontal="@dimen/_3sdp"
                    android:layout_weight="1"
                    android:tag="Mon" />

                <clock.alarm.stopwatch.views.DaySwitch
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:layout_marginHorizontal="@dimen/_3sdp"
                    android:layout_weight="1"
                    android:tag="Tue" />

                <clock.alarm.stopwatch.views.DaySwitch
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:layout_marginHorizontal="@dimen/_3sdp"
                    android:layout_weight="1"
                    android:tag="Wed" />

                <clock.alarm.stopwatch.views.DaySwitch
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:layout_marginHorizontal="@dimen/_3sdp"
                    android:layout_weight="1"
                    android:tag="Thu" />

                <clock.alarm.stopwatch.views.DaySwitch
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:layout_marginHorizontal="@dimen/_3sdp"
                    android:layout_weight="1"
                    android:tag="Fri" />

                <clock.alarm.stopwatch.views.DaySwitch
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:layout_marginHorizontal="@dimen/_3sdp"
                    android:layout_weight="1"
                    android:tag="Sat" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/days"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ring_alarm_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:drawableLeft="@drawable/ic_ring"
                    android:drawablePadding="@dimen/_20sdp"
                    android:fontFamily="@font/gotham"
                    android:gravity="center_vertical"
                    android:paddingVertical="@dimen/_5sdp"
                    android:text="@string/default_ring"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_13sdp" />

                <RelativeLayout
                    android:id="@+id/vibrateRL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp">

                    <TextView
                        android:id="@+id/vibrant_alarm_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:drawableLeft="@drawable/ic_vibrate"
                        android:drawablePadding="@dimen/_20sdp"
                        android:fontFamily="@font/gotham"
                        android:gravity="center_vertical"
                        android:paddingVertical="@dimen/_5sdp"
                        android:text="@string/vibrant"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/_13sdp" />

                    <ImageView
                        android:id="@+id/vibrateToggle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:padding="@dimen/_5sdp" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/delete_alarm_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:drawableLeft="@drawable/ic_trash"
                    android:drawablePadding="@dimen/_20sdp"
                    android:drawableTint="#868B90"
                    android:fontFamily="@font/gotham"
                    android:gravity="center_vertical"
                    android:paddingVertical="@dimen/_5sdp"
                    android:text="@string/delete"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:id="@+id/label_alarm_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:drawableLeft="@drawable/ic_pen"
                    android:drawablePadding="@dimen/_20sdp"
                    android:fontFamily="@font/gotham"
                    android:gravity="center_vertical"
                    android:paddingVertical="@dimen/_5sdp"
                    android:text="@string/add_Label"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_13sdp" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/blankRL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#8F1A1D1F"
        android:visibility="gone" />
</androidx.cardview.widget.CardView>